<resources>
    <!-- Strings originales para nuestra app -->
    <string name="app_name">EncuestaPreferencias</string>
    <string name="app_title">Encuesta de Preferencias</string>
    <string name="nombre_completo">Ingrese su nombre completo:</string>
    <string name="ingrese_su_nombre">Escriba su nombre aquí</string>
    <string name="seleccione_comida">Seleccione su comida favorita:</string>
    <string name="italiana">Italiana</string>
    <string name="china">China</string>
    <string name="panamena">Panameña</string>
    <string name="seleccione_pasatiempo">Seleccione su pasatiempo favorito:</string>
    <string name="practica_deporte">¿Practica deporte?</string>
    <string name="si_no">Sí/No</string>
    <string name="seleccionar_fecha">Seleccionar Fecha de Nacimiento</string>
    <string name="imagen_comida">Imagen de comida seleccionada</string>
    <string name="mostrar_mensaje_divertido">Mostrar Mensaje Divertido</string>
    <string name="mostrar_resultados">Mostrar Resultados</string>
    <string name="titulo_resultados">Resultados de la Encuesta</string>
    <string name="mensaje_divertido_1">¡Si fueras un plato, serías el plato principal!</string>
    <string name="mensaje_divertido_2">Tu pasatiempo revela que eres una persona con buen gusto</string>
    <string name="mensaje_divertido_3">¡Con esa selección de comida, deberías abrir un restaurante!</string>
    <string name="error_nombre_vacio">Por favor, ingrese su nombre</string>
    <string name="error_comida_no_seleccionada">Por favor, seleccione una comida favorita</string>

    <!-- Arrays para el Spinner -->
    <string-array name="pasatiempos_array">
        <item>Leer</item>
        <item>Jugar videojuegos</item>
        <item>Cocinar</item>
        <item>Viajar</item>
    </string-array>

    <!-- Strings para navegación y fragmentos -->
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus.</string>
</resources>